# GPRat

./: CMakeLists.txt  CMakePresets.json  compile_gprat.sh  create_python_package.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  __init__.py
core/: CMakeLists.txt
core/include/: apex_utils.hpp  gp_hyperparameter.hpp  gprat_c.hpp
core/include/cpu/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  cholesky_factor.hpp  functions.hpp  gp_algorithms.hpp  gp_functions.hpp  gp_kernel.hpp  tiled_algorithms.hpp
core/include/gpu/: adapter_cublas.cuh  cholesky_factor.cuh  functions.cuh  gp_algorithms.cuh  gp_functions.cuh  gp_kernel.cuh  tiled_algorithms.cuh
core/src/: gp_hyperparameter.cpp  gprat_c.cpp  target.cpp  utils_c.cpp
core/src/cpu/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  cholesky_factor.cpp  functions.cpp  gp_algorithms.cpp  gp_functions.cpp  gp_kernel.cpp  tiled_algorithms.cpp
core/src/gpu/: adapter_cublas.cu  cholesky_factor.cu  functions.cu  gp_algorithms.cu  gp_functions.cu  gp_kernel.cu  tiled_algorithms.cu
data/data_1024/: output.json
examples/gprat_cpp/: CMakeLists.txt  run_gprat_cpp.sh  run_gprat_spack.sh
examples/gprat_cpp/src/: execute.cpp  execute_executor.cpp  execute_gemm.cpp  execute_old.cpp
examples/gprat_python/: execute.py
spack-repo/environments/: setup_gprat_cpu_gcc.sh
test/: CMakeLists.txt
test/src/: output_correctness.cpp
